syntax = "proto3";

/* This service is used by clients who wish to make Discord API requests from a central server that handles rate limit logic. */
service RequestService {
    rpc request(RequestMessage) returns (ResponseMessage);
}

/* Request represents a client's Discord API request.
 * It contains the necessary information for the server to make the request on its behalf. */
message RequestMessage {
    string method = 1; // HTTP method
    string url = 2; // Discord endpoint url. (e.g. channels/123)
    string data = 3; // JSON encoded data to send wtih request.
    string headers = 4; // JSON encoded headers to send with request.
}

/* Response represents Discord's response to the client's request. */
message ResponseMessage { 
    uint32 status_code = 1; // HTTP status code.
    string status_text = 2; // Status message from Discord.
    string data = 3; // JSON encoded data from Discord.
}